@@ -1,35 +1,58 @@
 package jose.patricio.ScolarshipChallenge.services;
 
+import jose.patricio.ScolarshipChallenge.entities.*;
+import jose.patricio.ScolarshipChallenge.exceptions.ClassArgumentException;
+import jose.patricio.ScolarshipChallenge.exceptions.IdNotFoundException;
+import jose.patricio.ScolarshipChallenge.exceptions.InvalidEnumValueException;
 import jose.patricio.ScolarshipChallenge.dtos.ClassRecord;
-import jose.patricio.ScolarshipChallenge.entities.ClassEntity;
 import jose.patricio.ScolarshipChallenge.repositories.ClassRepository;
+import jose.patricio.ScolarshipChallenge.repositories.OrganizerRepository;
+import jose.patricio.ScolarshipChallenge.repositories.StudentRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 public class ClassServiceImpl implements ClassService {
 
+    private static final String IDNOTFOUND = "Class Id not found";
+
     private final ClassRepository classRepository;
+
+    private final OrganizerRepository organizerRepository;
+
+    private final StudentRepository studentRepository;
+
     @Autowired
-    public ClassServiceImpl(ClassRepository classRepository) {
+    public ClassServiceImpl(ClassRepository classRepository, OrganizerRepository organizerRepository, StudentRepository studentRepository) {
         this.classRepository = classRepository;
+        this.organizerRepository = organizerRepository;
+        this.studentRepository = studentRepository;
     }
 
     public List<ClassRecord> getAllClasses() {
         return classRepository.findAll().stream()
                 .map(this::mapToClassRecord)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ClassRecord getClassById(Long id) {
         return classRepository.findById(id)
                 .map(this::mapToClassRecord)
-                .orElseThrow(() -> new RuntimeException("TODO")); // Replace "TODO" with a more appropriate exception
+                .orElseThrow(() -> new IdNotFoundException(IDNOTFOUND));
     }
 
     public ClassRecord createClass(ClassRecord classRecordToCreate) {
+
+        validateOrganizerIdIfNotNull(classRecordToCreate);
+
+        if(!classRecordToCreate.status().equals(ClassStatus.WAITING)){
+            throw new InvalidEnumValueException("Class must be in " + ClassStatus.WAITING + " status before created");
+        }
+
         ClassEntity classEntity = mapToClassEntity(classRecordToCreate);
         classEntity = classRepository.save(classEntity);
 
@@ -38,20 +61,68 @@ public class ClassServiceImpl implements ClassService {
 
 
     public ClassRecord updateClass(Long id, ClassRecord updatedClassRecord) {
+
+        validateOrganizerIdIfNotNull(updatedClassRecord);
+
         return classRepository.findById(id)
                 .map(existingClassEntity -> updateAndSaveClassEntity(existingClassEntity, updatedClassRecord))
                 .map(this::mapToClassRecord)
-                .orElseThrow(() -> new RuntimeException("Class not found")); // TODO: Replace with a more appropriate exception
+                .orElseThrow(() -> new IdNotFoundException(IDNOTFOUND));
+
+
     }
 
     public void deleteClass(Long id) {
         classRepository.findById(id)
                 .ifPresentOrElse(
-                        classEntity -> classRepository.delete(classEntity),
+                        classEntity -> {
+
+                            List<StudentEntity> studentsToUpdate = studentRepository.findByClassEntity(classEntity);
+
+                            studentsToUpdate.forEach(student -> {
+                                student.setClassEntity(null);
+
+                                studentRepository.save(student);
+
+                            });
+
+                            classRepository.delete(classEntity);
+                        },
                         () -> {
-                            throw new RuntimeException("Class not found"); //TODO: Replace with a more appropriate exception
+                            throw new IdNotFoundException(IDNOTFOUND);
                         }
                 );
+    }
+
+    @Override
+    public ClassRecord startClass(Long id) {
+        ClassEntity existingClassEntity = classRepository.findById(id)
+                .orElseThrow(() -> new IdNotFoundException(IDNOTFOUND));
+
+        if (existingClassEntity.getStatus().equals(ClassStatus.STARTED) || existingClassEntity.getStatus().equals(ClassStatus.FINISHED)) {
+            throw new ClassArgumentException("Class has already "+ existingClassEntity.getStatus());
+        }
+
+        if (existingClassEntity.getStudentEntities().size() < 15 || existingClassEntity.getStudentEntities().size() > 30) {
+            throw new ClassArgumentException(
+                    "Number of students must be between 15 and 30 to start the class. Current: " + existingClassEntity.getStudentEntities().size());
+        }
+
+        validateIfHasAllOrganizersNeeded(existingClassEntity.getOrganizers());
+
+        existingClassEntity.setStatus(ClassStatus.STARTED);
+        return mapToClassRecord(classRepository.save(existingClassEntity));
+    }
+
+    @Override
+    public ClassRecord finishClass(Long id) {
+        ClassEntity existingClassEntity = classRepository.findById(id)
+                .orElseThrow(() -> new IdNotFoundException(IDNOTFOUND));
+
+        existingClassEntity.setStatus(ClassStatus.FINISHED);
+
+        return mapToClassRecord(classRepository.save(existingClassEntity));
+
     }
 
     private ClassRecord mapToClassRecord(ClassEntity classEntity) {
@@ -91,6 +162,30 @@ public class ClassServiceImpl implements ClassService {
         return classRepository.save(existingClassEntity);
     }
 
+
+    public void validateIfHasAllOrganizersNeeded(List<OrganizerEntity> organizers) {
+        Map<OrganizerRole, Long> roleCounts = organizers.stream()
+                .collect(Collectors.groupingBy(
+                        OrganizerEntity::getRole,
+                        Collectors.counting()
+                ));
+
+        long coordinatorCount = roleCounts.getOrDefault(OrganizerRole.COORDINATOR, 0L);
+        long smCount = roleCounts.getOrDefault(OrganizerRole.SCRUMMASTER, 0L);
+        long instructorCount = roleCounts.getOrDefault(OrganizerRole.INSTRUCTOR, 0L);
+
+        if (coordinatorCount < 1 || smCount < 1 || instructorCount < 3) {
+            throw new ClassArgumentException("To start the class you need 1 coordinator, 1 scrum master and 3 instructors.");
+        }
+    }
+
+    public void validateOrganizerIdIfNotNull(ClassRecord classRecord) {
+        Optional.ofNullable(classRecord.organizers())
+                .ifPresent(organizerEntities -> organizerEntities.stream()
+                        .map(OrganizerEntity::getId)
+                        .forEach(organizerId -> organizerRepository.findById(organizerId)
+                                .orElseThrow(() -> new IdNotFoundException("Organizer Id not found"))));
+    }
 
 
 }
